# CelluralAutomationCPP

CAcpp/: CAcpp.cpp  CAcpp.h  CMakeLists.txt  Cell.cpp  Cell.h  Simulation.cpp  Simulation.h  Space.cpp  Space.h  Types.h
CAcpp/Neighborhood/Include/: PeriodicBoundaryCondition.h  VonNeumannNeighborhood.h
CAcpp/Neighborhood/interface/: IBoundaryCondition.h  INeighborhood.h
CAcpp/Neighborhood/src/: PeriodicBoundaryCondition.cpp  VonNeumannNeighborhood.cpp
